Refactoring to OO, improved CSS styling

--- a/play.html
+++ b/play.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="play.css">
 </head>
 <body>
+  <div id="hex-container">
+  </div>
 	<script type="text/javascript" src="play.js"></script>
 </body>
 </html>
