building out general ring function for grid class

--- a/HexWave.html
+++ b/HexWave.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>Play</title>
-	<link rel="stylesheet" type="text/css" href="play.css">
+	<link rel="stylesheet" type="text/css" href="HexWave.css">
 </head>
 <body>
   <div id="hex-container">
   </div>
-	<script type="text/javascript" src="play.js"></script>
+	<script type="text/javascript" src="HexWave.js"></script>
 </body>
 </html>
