--- a/HexWave.html
+++ b/HexWave.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Play</title>
+	<title>HexWave</title>
 	<link rel="stylesheet" type="text/css" href="HexWave.css">
 </head>
 <body>
