Building OO HexWave
- Completed lightning function
- Built out event handling mechanism for Circles
- Built out origin select mode sequence for grid

--- a/HexWave.html
+++ b/HexWave.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Play</title>
+	<title>HexWave</title>
 	<link rel="stylesheet" type="text/css" href="HexWave.css">
 </head>
 <body>
-  <div id="hex-container">
-  </div>
 	<script type="text/javascript" src="HexWave.js"></script>
 </body>
 </html>
